--- a/portfolio_app/public/index.html
+++ b/portfolio_app/public/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<title></title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.0/react.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.0/react-dom.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-	<script src="/js/app.js" type="babel"></script>
+	<script src="js/app.js" type="text/babel"></script>
 </head>
 <body>
 	<div id="main-container"></div>
